--- a/{{ cookiecutter.repository_name }}/RMSKIN.ini
+++ b/{{ cookiecutter.repository_name }}/RMSKIN.ini
@@ -1,9 +1,9 @@
 [rmskin]
 ; RECOMMENDED This will be the Rainmeter file-type to load on-package-install
-LoadType=Skin
+LoadType={{ cookiecutter.import_type }}
 
 ; RECOMMENDED This will be the Rainmeter file to load on-package-install
-Load={{ cookiecutter.project_name }}\{{ cookiecutter.project_name }}.ini
+Load={%- if cookiecutter.import_type == "Skin" -%}{%- if cookiecutter._load_skin != "NONE" -%}{{ cookiecutter._load_skin }}{%- else -%}{{ cookiecutter.project_name }}\{{ cookiecutter.project_name }}.ini{%- endif -%}{%- else -%}{{ cookiecutter.import }}{%- endif %}
 
 ; CONVENTIONAL This will be the minimum version of Rainmeter required by 
 ; the installing package
@@ -21,7 +21,7 @@ MinimumWindows=5.1
 ; Or type and uncomment it on the next line
 Author={{ cookiecutter.author_full_name }}
 
-; To use a Custom name different from your repository name, 
+; To use a Custom package name different from your repository name, 
 ; type and uncomment it on the next line
 ; Name={{ cookiecutter.project_name }}
 
