--- a/{{ cookiecutter.repository_name }}/RMSKIN.ini
+++ b/{{ cookiecutter.repository_name }}/RMSKIN.ini
@@ -10,8 +10,8 @@ Load={%- if cookiecutter.import_type == "Skin" -%}{%- if cookiecutter._load_skin
 MinimumRainmeter={{ cookiecutter.req_rainmeter_version }}
 
 ; CONVENTIONAL This will be the windows internal version required by the
-; installing package. Notice the value "5.1" indicates Windows 7
-MinimumWindows=5.1
+; installing package. Notice the value "5.1" indicates Windows XP
+MinimumWindows={{ cookiecutter.req_windows_version }}
 
 ; Leave "Version" set to "auto" to use github action release tag.
 ; Anything other than "auto" will be used despite the github release tag
