--- a/{{ cookiecutter.repository_name }}/RMSKIN.ini
+++ b/{{ cookiecutter.repository_name }}/RMSKIN.ini
@@ -10,7 +10,7 @@ Load={%- if cookiecutter.import_type == "Skin" -%}{%- if cookiecutter._load_skin
 MinimumRainmeter={{ cookiecutter.req_rainmeter_version }}
 
 ; CONVENTIONAL This will be the windows internal version required by the
-; installing package. Notice the value "5.1" indicates Windows XP
+; installing package. Notice the value "6.1" indicates Windows 7
 MinimumWindows={{ cookiecutter.req_windows_version }}
 
 ; Leave "Version" set to "auto" to use github action release tag.
