--- a/{{ cookiecutter.repository_name }}/.github/workflows/build.yml
+++ b/{{ cookiecutter.repository_name }}/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 name: RMSKIN Packager
 
-on: 
+on:
   push:
   pull_request:
   release:
-    types: 
+    types:
       - published
       # - edited
 
@@ -21,12 +21,16 @@ jobs:
       # Runs a rmskin packager action
       - name: Run Build action
         id: builder
-        uses: 2bndy5/rmskin-action@v1.1.4
+        uses: 2bndy5/rmskin-action@v1.1.5
 
-      # Use the output from the `builder` step
-      - name: Print the output filename
-        run: echo "The output file was ${{ steps.builder.outputs.arc_name }}"
-      
+      # upload the output from the `builder` step as workflow artifact
+      - name: Archive rmskin file as artifact
+        uses: actions/upload-artifact@v2
+        if: github.event_name != 'release'
+        with:
+          name: ${{ steps.builder.outputs.arc_name }}
+          path: ${{ github.workspace }}/${{ steps.builder.outputs.arc_name }}
+
       # get release upload_url
       - name: Get Release
         id: get_release
@@ -37,7 +41,7 @@ jobs:
 
       # Upload the asset
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         if: github.event_name == 'release'
         env:
@@ -47,4 +51,4 @@ jobs:
           asset_path: ./${{ steps.builder.outputs.arc_name }}
           asset_name: ${{ steps.builder.outputs.arc_name }}
           asset_content_type: application/zip
-          
+
