--- a/{{ cookiecutter.repository_name }}/.github/workflows/build.yml
+++ b/{{ cookiecutter.repository_name }}/.github/workflows/build.yml
@@ -16,39 +16,26 @@ jobs:
     steps:
       # Checkout code
       - name: Checkout this Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # Runs a rmskin packager action
       - name: Run Build action
         id: builder
-        uses: 2bndy5/rmskin-action@v1.1.5
+        uses: 2bndy5/rmskin-action@v1.1.8
 
       # upload the output from the `builder` step as workflow artifact
       - name: Archive rmskin file as artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: github.event_name != 'release'
         with:
           name: ${{ steps.builder.outputs.arc_name }}
           path: ${{ github.workspace }}/${{ steps.builder.outputs.arc_name }}
 
-      # get release upload_url
-      - name: Get Release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.0
-        if: github.event_name == 'release'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       # Upload the asset
       - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
         if: github.event_name == 'release'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./${{ steps.builder.outputs.arc_name }}
-          asset_name: ${{ steps.builder.outputs.arc_name }}
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ steps.builder.outputs.arc_name }}
           asset_content_type: application/zip
-
